# LELEC210X

./: .gitignore  event_log_ESC50_sounds.txt  event_log_recorded_sounds.txt  pyproject.toml  test.csv
classification/: cnn_model.ipynb  compute_max_frequency.py  h5a1_toy.ipynb  h5a2_audio.ipynb  h5a3_confidence_and_memory.ipynb  history_of_played_sounds.txt  lowpass_xgboost.ipynb  mic_filter.py  model.ipynb  model_from_melvec.ipynb  new_cnn_model copy.ipynb  new_cnn_model.ipynb  play_sounds.py  plot_spectrogram_wav_sounds.py  random_forest_model.ipynb  xgboost_model.ipynb  xgboost_new_features_model.ipynb
classification/contest_simulator/: creator_ESC50_sounds.py  creator_recorded_sounds.py  event_log_ESC50_sounds.txt  event_log_recorded_sounds.txt
classification/data/: frequency_filter.npy  impulse_response.npy
classification/models/: xgb_bayesopt_best_model.pkl
classification/scripts/: create_1sec_sounds.py  crop.py  rename_indexes.py  towav.py
classification/useless/: h1_feature_vectors.ipynb  (+4 more)
melvecs/: chainsaw_01.npy  chainsaw_03.npy  chainsaw_04.npy  chainsaw_05.npy  chainsaw_06.npy  chainsaw_07.npy  chainsaw_08.npy  chainsaw_09.npy  chainsaw_10.npy  chainsaw_11.npy  chainsaw_12.npy  chainsaw_13.npy  chainsaw_15.npy  chainsaw_16.npy  chainsaw_17.npy  chainsaw_18.npy  chainsaw_21.npy  chainsaw_22.npy  chainsaw_23.npy  chainsaw_25.npy  chainsaw_26.npy  chainsaw_27.npy  chainsaw_28.npy  chainsaw_29.npy  chainsaw_30.npy  chainsaw_31.npy  chainsaw_32.npy  chainsaw_33.npy  chainsaw_34.npy  chainsaw_35.npy  chainsaw_36.npy  chainsaw_37.npy  chainsaw_38.npy  chainsaw_39.npy  chainsaw_40.npy  chainsaw_41.npy  chainsaw_42.npy  chainsaw_43.npy  chainsaw_44.npy  chainsaw_45.npy  (+192 more)
(+575 files in other folders)
