[project]
authors = [
  {name = "LELEC210X teaching assistants"},
]
description = "The best project for the best students"
name = "LELEC210X"
readme = "README.md"
requires-python = "==3.9.*"
version = "0.1.0"
dependencies = [
    "xgboost>=2.1.4",
    "bayesian-optimization>=2.0.3",
    "tensorflow>=2.19.0",
    "tensorflow-keras>=0.1",
    "scikeras>=0.13.0",
    "keras-tuner>=1.4.7",
]

[tool.ruff]
extend-exclude = ["**/doxygen/**/*.py"]
extend-ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D205",
  "D212",
  "E501",
]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["auth", "classification", "common", "contrib", "leaderboard"]}
line-length = 88

[tool.rye]
dev-dependencies = [
  "pre-commit>=3.5.0",
  "pygments>=2.18.0",
  "pytest>=7.4.3",
  "youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git",
]
managed = true
virtual = true

[tool.rye.workspace]
members = ["auth", "classification", "common", "contrib", "leaderboard"]

[tool.uv]
dev-dependencies = [
  # Local packages
  "auth",
  "classification",
  "common",
  "contrib[all]",
  "leaderboard",
  # Dev dependencies
  "pre-commit>=3.5.0",
  "pygments>=2.18.0",
  "pytest>=7.4.3",
  "youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git",
]

[tool.uv.sources]
auth = {workspace = true}
classification = {workspace = true}
common = {workspace = true}
contrib = {workspace = true}
leaderboard = {workspace = true}

[tool.uv.workspace]
members = ["auth", "classification", "common", "contrib", "leaderboard"]
